employee-service/employee-k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    appname: employee-pod
  type: NodePort
  ports:
    - name: employee-port
      nodePort: 30001
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
  labels:
    name: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: employee-pod
  template:
    metadata:
      name: employee-pod
      labels:
        appname: employee-pod
    spec:
      containers:
        - name: employee-container
          image: vinothg2309/employee-service
          ports:
            - containerPort: 8000
              protocol: TCP
