employee-service/mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
    name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      appdb: mongo
  template:
    metadata:
      labels:
        name: mongo
        appdb: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:3.6.6
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo-service
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    appdb: mongo
