employee-service/mongo-namespace.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongodb
    name: mongodb
spec:
  serviceName: "local-service"
  replicas: 1
  selector:
    matchLabels:
      appdb: mongo
  template:
    metadata:
      labels:
        name: mongo
        appdb: mongo
    spec:
      volumes:
      - name: mongo-pv-volume
        persistentVolumeClaim:
          claimName: pv-claim
      containers:
        - name: mongodb
          image: mongo:3.6.6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pv-volume
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongo-service
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    appdb: mongo
